--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,6 +1,11 @@
 .home {
     background-image: url("Home.png");
-    height: 1000vh;
+    height: 100vh;
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .slogan {
