--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -13,3 +13,10 @@
     font-size: 18px;
     padding-left: 5em;    
 }
+
+.about-cards {
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    margin: auto;
+}
