--- a/src/Components/Explore/ExploreCard/ExploreCard.css
+++ b/src/Components/Explore/ExploreCard/ExploreCard.css
@@ -7,7 +7,8 @@
 }
 
 .explore-card {
-    width: 500px;
+    width: 50%;
+    margin: 1em;
     height: 300px;
     border-radius: 25px;
     /* Center and scale the image nicely */
@@ -17,28 +18,40 @@
 }
 
 .explore-cards {
-    justify-content: space-around;
     display: flex;
+    margin: auto;
+    width: 70%;
 }
 
 .explore-card-desc {
+    width: 90%;
+    margin: auto;
     box-sizing: border-box;
-
-    width: 424px;
-    height: 100px;
+    /* height: 100px; */
     background: linear-gradient(94.33deg, rgba(255, 255, 255, 0.6) 3.19%, rgba(255, 255, 255, 0.1) 99.26%);
+    -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
-    /* Note: backdrop-filter has minimal browser support */
-
     border-radius: 15px;
+    margin-top: 15em;
 }
 
 .explore-card-info {
-    width: 80px;
-    height: 30px;
+    width: 4em;
     background: linear-gradient(90deg, #FF594C 0%, #FAC527 100%);
     border-radius: 10px;
+    padding: 0.5em;
+    padding-bottom: 0;
+    font-family: 'Ubuntu';
+    font-size: 18px;
+    color: #000000;
+    text-align: center;
+    margin: 0em 0.5em;
+    height: 2em;
 }
+
+/* .explore-card-body {
+    display: flex;
+} */
 
 .explore-card-book {
     width: 100px;
@@ -59,5 +72,6 @@
     display: flex;
     align-items: center;
 
-    color: #000000;
+    color: #000;
+    padding: 1em;
 }
