--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,47 +1,65 @@
-.nav-bar {
-    padding: 1em 0em;
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .logo {
-    /* Your Logo */
-    position: absolute;
-    width: 186px;
-    height: 53px;
-    left: 50px;
-    font-family: 'Dancing Script';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 45px;
-    line-height: 54px;
-    color: #FFFFFF;
-  }
-    
-  .nav-items {
-    width: 50vw;
-    display: flex;
-  }
-  
-  .nav-item {
-    display: flex;
-    justify-content: space-between;
-    font-family: 'Exo 2';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 110%;
-    /* or 22px */
-    align-items: center;
-    text-align: center;
-  
-    color: #FFFFFF;
-    padding: 0.1em 2em 0.1em 2em;
-    margin: 0.5em;
-  }
-  
-  .nav-item-outlined {
-    box-sizing: border-box;
-    border: 2px solid #FFFFFF;
-    border-radius: 10px;
-  }
+.footer {
+  padding: 1em 0em;
+  display: flex;
+  flex-direction: row;
+}
+
+/* .footer-items-company {
+  display: flex;
+  flex-direction: column;
+} */
+
+.footer-items-company {
+  position: absolute;
+  left: 50px;
+}
+
+.footer-company {
+  margin: 4em 0em 0em 3em;
+}
+
+.footer-legal {
+  margin: 5em 0em 2em 3em;
+  float: left;
+  position: absolute;
+}
+
+.logo {
+  /* Your Logo */
+  color: #000;
+  width: 186px;
+  height: 53px;
+  font-family: 'Dancing Script';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 54px;
+}
+
+.footer-items {
+  width: 50vw;
+  display: flex;
+}
+
+.footer-item {
+  display: flex;
+  justify-content: space-between;
+  font-family: 'Exo 2';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 110%;
+  /* or 22px */
+  align-items: center;
+  text-align: center;
+
+  color: #000;
+  padding: 0.1em 2em 0.1em 2em;
+  margin: 0.5em;
+}
+
+.footer-item-outlined {
+  box-sizing: border-box;
+  border: 2px solid #000;
+  border-radius: 10px;
+}
